<resources>
    <string name="app_name">Discover Bangladesh</string>
    <string name="facebook_application_id" translatable="false">888148518010025</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb888148518010025</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_home">Home</string>
    <string name="title_blog">Blog</string>
    <string name="title_featured_places">Featured Places</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_tourist">Tourist</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_hospital">Hospital</string>

    <string name="title_security">Security</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This page will be added very soon</string>
</resources>
