<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_blog_24dp"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_featured_places"
        android:icon="@drawable/ic_featured_places_24dp"
        android:title="@string/title_featured_places"
       />



    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings"
        />

</menu>
